# dx-map

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dioxus.toml  README.md
assets/: key.css  layerswitcher.css  main.css  tfl.css
assets/data/: README.md  combine_routes.sh  platforms.json  routes.json  stations.json
src/: main.rs
src/app/: canvas.rs  key_panel.rs  layer_panel.rs  line_css.rs  map_init.js  mod.rs  simulation.rs  simulation_panel.rs  tfl_helper.rs
src/app/js/: key_control.js  layer_switcher.js  map_init.js  simulation_control.js
src/app/simulation/: mod.rs  model.rs  state.rs
src/data/: api.rs  line_definitions.rs  loader.rs  map_helpers.rs  mod.rs  model.rs
src/maplibre/: bindings.rs  helpers.rs  manager.rs  mod.rs  tfl_integration.rs
src/maplibre/manager/: controls.rs  events.rs  layers.rs  lifecycle.rs  mod.rs
src/tb8/: mod.rs
src/tfl/: mod.rs  routes.rs  stations.rs  vehicles.rs
src/utils/: geojson.rs  log.rs  mod.rs
