[package]
name = "my-map"
version = "0.1.0"
authors = ["Louis Maddox <louismmx@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
dioxus = { version = "0.6.0", features = [] }
dioxus-web = "0.6.3"
log = "0.4"
maplibre = { version = "0.0.3", features = ["web-webgl"] }
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
